# server

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COMPILING  README  README.DATABASE  README.md  config.lua.dist  gendb.sh
Source/: .gitignore  Makefile.am  account.h  actor.cpp  admin.cpp  admin.h  allocator.h  autogen.lua  ban.cpp  baseevents.cpp  beds.cpp  beds.h  chat.cpp  chat.h  classes.h  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  configure.ac  connection.h  container.cpp  container.h  creature.cpp  creature_manager.cpp  creature_type.cpp  creatureevent.cpp  creatureevent.h  cylinder.cpp  cylinder.h  database.h  database_driver.cpp  database_driver.h  database_driver_mysql.cpp  database_driver_mysql.h  database_driver_odbc.cpp  database_driver_odbc.h  database_driver_pgsql.cpp  database_driver_pgsql.h  (+66 more)
Source/compiler/: gcc.h  llvm.h  workarounds.h
otserv/branches/otserv81/: Makefile.am  README  README.DATABASE  actions.cpp  admin.cpp  admin.xml  chat.cpp  combat.h  commands.cpp  condition.cpp  configmanager.h  configure.ac  databaseodbc.cpp  databasesqlite.cpp  depot.cpp  fileloader.h  game.cpp  house.cpp  house.h  iomap.h  iomapserialize.cpp  ioplayer.cpp  itemloader.h  items.cpp  items.h  luascript.h  map.cpp  map.h  monster.cpp  monster.h  monsters.cpp  npc.h  outputmessage.cpp  player.cpp  protocolgame.cpp  spells.cpp  status.cpp  status.h  tasks.cpp  trashholder.cpp  (+1 more)
otserv/branches/otserv81/data/: admin.xml  commands.xml
otserv/branches/otserv81/monster/: monsters.xml
otserv/branches/otserv81/npc/: sven.xml
otserv/branches/otserv81/world/: map-house.xml
otserv/branches/revdbsys/: Makefile.am  Makefile.in  README  account.cpp  account.h  actions.cpp  admin.cpp  allocator2.cpp  allocator2.h  backup.sql  ban.cpp  ban.h  commands.cpp  config.h.in  config.lua.dist  configmanager.cpp  configmanager.h  configure  configure.in  const80.h  creatureevent.h  cylinder.h  database.cpp  database.h  database.sql  databasemysql.cpp  databasemysql.h  databaseodbc.cpp  databaseodbc.h  databasepgsql.cpp  databasepgsql.h  databasesqlite.cpp  databasesqlite.h  db.s3db  definitions.h  enums.h  game.cpp  house.cpp  ioaccount.cpp  ioaccount.h  (+36 more)
otserv/branches/revdbsys/data/: global.lua
otserv/branches/revmovesys/: Makefile.am  README  account.h  actions.cpp  actions.h  allocator.h  chat.cpp  chat.h  commands.cpp  commands.h  configure.in  const75.h  container.cpp  container.h  creature.cpp  creature.h  cylinder.cpp  cylinder.h  database.cpp  definitions.h  depot.cpp  depot.h  exception.cpp  fileloader.cpp  fileloader.h  game.cpp  game.h  ioaccount.cpp  ioaccountxml.cpp  ioaccountxml.h  iomap.h  iomapsql.cpp  iomapsql.h  iomapxml.cpp  ioplayersql.cpp  ioplayerxml.cpp  ioplayerxml.h  item.cpp  item.h  itemloader.h  (+32 more)
otserv/branches/revscriptsys2/: AUTHORS  Makefile.am  README  account.cpp  account.h  actor.cpp  actor.h  admin.cpp  ban.cpp  ban.h  beds.cpp  chat.cpp  chat.h  classes.h  combat.cpp  combat.h  commands.h  condition.cpp  condition.h  condition_attributes.cpp  condition_attributes.h  condition_attributes.lua  config.lua.dist  configmanager.cpp  configmanager.h  configure.ac  connection.cpp  connection.h  const.cpp  const.h  const.lua  container.cpp  container.h  creature.cpp  creature.h  creature_manager.cpp  creature_manager.h  creature_type.cpp  creature_type.h  cylinder.cpp  (+131 more)
otserv/branches/revscriptsys2/cb/: otserv.cbp
otserv/branches/revscriptsys2/compiler/: cygwin.h  mingw32.h  msvc.h
otserv/branches/revscriptsys2/data/: README  admin.xml  commands.xml  global.lua
otserv/branches/revscriptsys2/dev-cpp/: Makefile.win  otserv-debug.dev  otserv.dev  otserv_private.rc
otserv/trunk/: AUTHORS  COMPILING  Doxyfile  Makefile  Makefile.am  Makefile.in  README  TODO  account.cpp  account.h  action.cpp  action.h  actions.cpp  actions.h  admin.cpp  admin.h  allocator.cpp  allocator.h  autogen.sh  backup.sql  ban.cpp  ban.h  baseevents.cpp  baseevents.h  basescript.cpp  basescript.h  battleSystem.cpp  battleSystem.h  beds.cpp  beds.h  bootstrap.sh  chat.cpp  chat.h  combat.cpp  combat.h  commands.cpp  commands.h  condition.cpp  condition.h  config.h.in  (+237 more)
otserv/trunk/cb/: otserv.cbp  otserv.depend  otserv.layout
otserv/trunk/codeblocks/: otserv.cbp  otserv.layout  otserv.rc
otserv/trunk/compiler/: cygwin.h  gcc.h  mingw32.h  msvc.h
otserv/trunk/data/: Makefile.am  admin.xml  commands.xml  functions.lua  global.lua  outfits.xml  update_makefileam.sh
otserv/trunk/debian/: init.d
otserv/trunk/dev-cpp/: Makefile.win  otserv-debug.dev  otserv-debug.layout  otserv.dev  otserv.layout
otserv/trunk/msvc/: otserv.vcproj
otserv/trunk/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
otserv/trunk/premake/: premake4.lua
otserv/trunk/vc10/: otserv.vcxproj  otserv.vcxproj.filters  resource.h  vc10.rc  vc10.sln  vc10.vcproj  vc10.vcxproj
otserv/trunk/vc8/: otserv.vcproj
otserv/trunk/vc9/: otserv.sln  otserv.vcproj  resource.h  vc9.rc  vc9.vcproj
src/: .gitignore  CMakeLists.txt  Makefile.am  abstract_lua_t.cpp  abstract_lua_t.h  account.h  actions.h  actor.cpp  actor.h  admin.cpp  admin.h  allocator.cpp  ban.cpp  ban.h  baseevents.cpp  beds.cpp  beds.h  boost_common.h  chat.cpp  chat.h  classes.h  combat.cpp  combat.h  condition.cpp  condition.h  condition_attributes.cpp  condition_attributes.h  configmanager.cpp  configmanager.h  configure.ac  connection.cpp  connection.h  const.cpp  const.h  container.cpp  container.h  creature.cpp  creature.h  creature_manager.cpp  creature_manager.h  (+157 more)
src/compiler/: gcc.h  llvm.h  msvc.h  workarounds.h
src/data/: exp_stages.lua  functions.lua  global.lua  globalTablesLib.lua  quests.xml  vocations.xml
src/data/actions/: actions.xml
src/data/items/: items.xml
src/data/monster/: monsters.xml
src/data/npc/: cityguard.xml
src/data/talkactions/: talkactions.xml
src/data/weapons/: weapons.xml
src/data/world/: map-house.xml
(+6084 files in other folders)
