dnl Process this file with autoconf to produce a configure script.
AC_INIT

AC_PREREQ(2.50)
AC_CONFIG_AUX_DIR(config)

AC_CONFIG_SRCDIR([creature.h])

AC_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(otserv, 0.2)

# check if we want debuging
AC_ARG_WITH(debug,   --with-debug      enable debuging, DEBUG=-DDEBUG)
AC_SUBST(DEBUG)

# Checks for programs.
AC_PROG_CXX([g++-3.2 g++-3 g++-3.1 g++-3.0 g++3 g++])
AC_LANG_CPLUSPLUS
AC_EXEEXT
AC_OBJEXT
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# check if we use mingw or unix...
#LDFLAGS=$LDFLAGS" -lwsock32 ";;
case "$host" in
*mingw* | *win*) target_sys=__WINDOWS__;;
*) target_sys=__LINUX__;;
esac
AC_SUBST(target_sys)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h errno.h fcntl.h netdb.h netinet/in.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_CHECK_FUNCS([gethostbyname inet_ntoa memset select socket strtol])

CXXFLAGS="-Wall ${CXXFLAGS} -D${target_sys} ${DEBUG}"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
