dnl Process this file with autoconf to produce a configure script.
AC_INIT

AC_PREREQ(2.50)
AC_CONFIG_AUX_DIR(config)

AC_CONFIG_SRCDIR([creature.h])

AM_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(otserv, 0.2)

# check if we want debuging
AC_ARG_WITH(debug,   --with-debug      enable debuging,DEBUG=-DDEBUG)

AC_SUBST(DEBUG)

#check if we want mysql
AC_ARG_ENABLE(mysqlpp,   --enable-mysqlpp      enable MySQL support, [
    AM_CONDITIONAL(USE_MYSQL, true)
    MYSQL_FLAGS=-DUSE_MYSQL
])
AC_SUBST(MYSQL_FLAGS)

# Checks for programs.
AC_PROG_CXX([g++-3.2 g++-3 g++-3.1 g++-3.0 g++3 g++])
AC_LANG_CPLUSPLUS
AC_EXEEXT
AC_OBJEXT
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h errno.h fcntl.h netdb.h netinet/in.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_CHECK_FUNCS([gethostbyname inet_ntoa memset select socket strtol])

# check for libxml2
AM_PATH_XML2(2.6.5, , AC_MSG_ERROR([you need libxml2 >= 2.6.5 to compile otserv!]))

# check for lua
PKG_CHECK_MODULES(LUA50, lualib50 >= 5.0.0, , AC_MSG_ERROR([you need lua and lualib >= 5.0 to compile otserv!]))
AC_SUBST(LUA50_CFLAGS)
AC_SUBST(LUA50_LIBS)

AC_CHECK_HEADERS([boost/config.hpp boost/bind.hpp],[BOOST_LIBS=-lboost_thread],[AC_MSG_ERROR("boost headers are missing.")])
AC_SUBST(BOOST_LIBS)

if test -n "$MYSQL_FLAGS"; then 
   AC_CHECK_HEADERS([mysql++.h],[MYSQLPP_LIBS=-lmysqlpp],[AC_MSG_ERROR("mysql++ missing.")])
   AC_CHECK_LIB(mysqlpp, main,[],[AC_MSG_ERROR("Linking against mysql++ failed.")])
   AC_SUBST(MYSQLPP_LIBS)
fi

#AC_CHECK_HEADERS([mysql++.h],[MYSQLPP_LIBS=-lmysqlpp],[AC_MSG_ERROR("mysql++ missing.")])
#AC_CHECK_LIB(mysqlpp, mysqlpp)
#AC_SUBST(MYSQLPP_LIBS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
